--- a/study-2023-canadian-wildfire-effect-igac.ipynb
+++ b/study-2023-canadian-wildfire-effect-igac.ipynb
@@ -14,7 +14,7 @@
     "\n",
     "For continued, seamless operation, a **.netrc** file containing an individual user's **NASA Earthdata Login** credentials (not supplied with this notebook) **should** be provided by each user intending to operate this notebook from their own AWS cloud environment; in the event a .netrc file is not provided in advance, this notebook features an interactive prompt for users to manually enter their own credentials (note: the user-entered credentials are one-time use to operate this notebook and are not stored in memory). \n",
     "\n",
-    "Below are the steps to creating a **.netrc** file and approving API-based access to the **NASA GES DISC Archvie**. Please note, **Step 2** below is **required** in advance for **all users** to successfully execute this notebook. \n",
+    "Below are the steps to creating a **.netrc** file and approving API-based access to the **NASA GES DISC Archive**. Please note, **Step 2** below is **required** in advance for **all users** to successfully execute this notebook. \n",
     "\n",
     "  1. Create an **Earthdata Login Account** ([clear here for details](https://urs.earthdata.nasa.gov/users/new))\n",
     "  2. Approve access to the **NASA GES DISC Archive** in your Earthdata Login Profile ([click here for details](https://disc.gsfc.nasa.gov/earthdata-login))\n",
